# stratum

./: .env.example  .gitignore  Dockerfile  Makefile  Stratum_PRD_v1.0.docx  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  terraform.yml
application/commands/: analyze_repository.py
application/dtos/: analysis_dto.py
application/orchestration/: analysis_workflow.py  dag_orchestrator.py
domain/entities/: __init__.py  author.py  commit.py  dependency.py  file_change.py  jira_issue.py  risk_report.py  sonar_issue.py  vulnerability.py
domain/events/: __init__.py  analysis_events.py  event_base.py
domain/ports/: __init__.py  ai_narrative_port.py  git_log_port.py  github_port.py  jira_port.py  report_generator_port.py  sonarqube_port.py  vulnerability_db_port.py
domain/services/: __init__.py  commit_quality_service.py  dependency_risk_service.py  design_antipattern_service.py  evolution_analysis_service.py  risk_aggregation_service.py
domain/value_objects/: __init__.py  risk_score.py  time_period.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  test-setup.ts
infrastructure/: logging_config.py
infrastructure/adapters/: claude_narrative_adapter.py  fallback_adapters.py  git_log_parser.py  github_adapter.py  jira_adapter.py  manifest_parser.py  nvd_vulnerability_adapter.py  sonarqube_adapter.py  themed_report_adapter.py  (+2 more)
scripts/: generate-api-client.sh  seed_data.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+88 files in other folders)
