[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stratum"
version = "1.0.0"
description = "AI-native code intelligence platform — every layer of your codebase, decoded."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "click>=8.1",
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
stratum = "presentation.cli.main:cli"
stratum-api = "uvicorn:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "infrastructure", "presentation"]

[tool.ruff]
target-version = "py312"
line-length = 100
